fix: update title

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ali Kaan Türkmen - Senior Embedded Software Engineer specializing in bare-metal firmware, Embedded Linux, and IoT systems">
-    <title>Ali Kaan Türkmen | Senior Embedded Software Engineer</title>
+    <meta name="description" content="Ali Kaan Türkmen - Senior Software Engineer specializing in bare-metal firmware, Embedded Linux, and IoT systems">
+    <title>Ali Kaan Türkmen | Senior  Software Engineer</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
