--- a/index.html
+++ b/index.html
@@ -300,6 +300,8 @@
                         <span class="skill-item">Embedded Linux</span>
                         <span class="skill-item">FreeRTOS</span>
                         <span class="skill-item">STM32</span>
+                        <span class="skill-item">Renesas RA</span>
+                        <span class="skill-item">MSP430</span>
                         <span class="skill-item">Buildroot</span>
                         <span class="skill-item">lwIP</span>
                         <span class="skill-item">Qt</span>
@@ -319,6 +321,7 @@
                         <span class="skill-item">.NET Web API</span>
                         <span class="skill-item">RESTful APIs</span>
                         <span class="skill-item">Microservices</span>
+                        <span class="skill-item">Firebase Auth</span>
                     </div>
                 </div>
 
@@ -331,8 +334,10 @@
                         <span class="skill-item">TCP/IP</span>
                         <span class="skill-item">MQTT</span>
                         <span class="skill-item">HTTP/HTTPS</span>
+                        <span class="skill-item">FTP</span>
                         <span class="skill-item">Modbus</span>
                         <span class="skill-item">RS232/RS485</span>
+                        <span class="skill-item">Power Line Communication</span>
                         <span class="skill-item">GSM/LTE/NB-IoT</span>
                     </div>
                 </div>
@@ -340,7 +345,7 @@
                 <div class="skill-category">
                     <h3 class="skill-category-title">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"></circle><circle cx="12" cy="12" r="4"></circle><line x1="4.93" y1="4.93" x2="9.17" y2="9.17"></line><line x1="14.83" y1="14.83" x2="19.07" y2="19.07"></line><line x1="14.83" y1="9.17" x2="19.07" y2="4.93"></line><line x1="14.83" y1="9.17" x2="18.36" y2="5.64"></line><line x1="4.93" y1="19.07" x2="9.17" y2="14.83"></line></svg>
-                        Databases
+                        Databases & Messaging Qeueues
                     </h3>
                     <div class="skill-items">
                         <span class="skill-item">PostgreSQL</span>
@@ -348,7 +353,7 @@
                         <span class="skill-item">MongoDB</span>
                         <span class="skill-item">RabbitMQ</span>
                         <span class="skill-item">DynamoDB</span>
-                        <span class="skill-item">SQL</span>
+                        <span class="skill-item">Mosquitto</span>
                     </div>
                 </div>
 
