--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="container">
-            <div class="hero-content">
-                <h1 class="hero-title">
+            <div class="hero-wrapper">
+                <div class="hero-image">
+                    <img src="profile.jpg" alt="Ali Kaan Türkmen" class="profile-picture">
+                </div>
+                <div class="hero-content">
+                    <h1 class="hero-title">
                     Hi, I'm <span class="gradient-text">Ali Kaan Türkmen</span>
                 </h1>
                 <p class="hero-subtitle">Senior Software Engineer | Embedded Systems | Backend | DevOps</p>
@@ -61,6 +65,7 @@
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M2.846 6.887c.03-.295-.083-.586-.303-.784l-2.24-2.7v-.403h6.958l5.378 11.795 4.728-11.795h6.633v.403l-1.916 1.837c-.165.126-.247.333-.213.538v13.498c-.034.204.048.411.213.537l1.871 1.837v.403h-9.412v-.403l1.939-1.882c.19-.19.19-.246.19-.537v-10.91l-5.389 13.688h-.728l-6.275-13.688v9.174c-.052.385.076.774.347 1.052l2.521 3.058v.404h-7.148v-.404l2.521-3.058c.27-.279.39-.67.325-1.052v-10.608z"></path></svg>
                     </a>
                 </div>
+            </div>
             </div>
         </div>
     </section>
